# ploog

./: Cargo.toml  README.md
.github/workflows/: build-release.yml
posts/: post-4.md  post1.md
public/hello/: index.html
src/: cli.rs  err.rs  live.rs  main.rs  parser.rs  server.rs
src/server/: console.rs  generator.rs  mod.rs
web/: package-lock.json  package.json  webpack.config.js
web/src/: Logo.jsx  index.css  index.js  index.jsx
web/src/components/: Editor.css  Editor.jsx  NavSidebar.jsx  PublishControls.css  PublishControls.jsx  index.css  index.js
