[package]
name = "ploog"
version = "0.1.0"
authors = ["Mitchell Hynes <me@mitchellhynes.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = "0.8.0"
tempfile = "3.2.0"
serde = { version = "1.0", features = [ "derive" ] }
toml = "0.5.8"
clap = "3.0.0-beta.2"
itertools = "0.8.0"
actix-web = "3"
actix-files = "0.5.0"
