[package]
name = "ploog"
version = "0.1.0"
authors = ["Mitchell Hynes <me@mitchellhynes.com>"]
build = "build.rs"
edition = "2018"

[profile.release]
opt-level = 'z'
lto = true

[dependencies]
pulldown-cmark = "0.8.0"
tempfile = "3.2.0"
serde = { version = "1.0", features = [ "derive" ] }
toml = "0.5.8"
clap = "3.0.0-beta.2"
itertools = "0.8.0"
actix-web = "3"
actix-web-static-files = { version = "3.0", features = [ "change-detection" ] }
actix-files = "0.5.0"
notify = { version = "5.0.0-pre.4", features = ["serde"] }

[build-dependencies]
actix-web-static-files = { version = "3.0", features = [ "change-detection" ] }
